# haskform

./: .gitignore  AGENTS.md  LICENSE  README.md  haskform.cabal  mise.toml  stack.yaml
.github/workflows/: ci.yml
docs/haskform-brain/: index.md
docs/haskform-brain/architecture/: free-monad-dsl.md
docs/haskform-brain/research/: dsl-free-monad.md  dsl-mtl.md  dsl-plain-functions.md  market-research.md
src/: Haskform.hs
src/Haskform/Core/: Plan.hs  State.hs
src/Haskform/DSL/: Core.hs  Interpreters.hs  SmartConstructors.hs
src/Haskform/Provider/: Protocol.hs
src/Haskform/Provider/StateStore/: Yaml.hs
test/: Spec.hs
